k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: gesture-smart-home
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: gesture-smart-home
spec:
  selector:
    app: redis
  ports:
    - port: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: gesture-smart-home
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
